--- a/style.css
+++ b/style.css
@@ -418,9 +418,26 @@ button a
 
 
 
+textarea , input[type=email] {
+    width: 100%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border:2px solid silver;
+    border-radius: 4px;
+  }
 
-
-
+  #my-form-button {
+    background-color: black;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float:center;
+    width: 30%;
+  }
+ 
 
 
 
