--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ button a
     display: block;
     text-decoration: none;
     margin-top: 1rem;
-  
+    padding: 1rem;
     color: black;
     font-weight: bold;
   }
